--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,10 +1,8 @@
 .youtube-sidebar {
   width: 150px;
   padding: 10px;
-  // box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   margin-top: 2px;
-  height: 100%;
-  overflow-y: auto;
 }
 
 .youtube-sidebar ul {
