--- a/src/app/video-container/video-container.component.scss
+++ b/src/app/video-container/video-container.component.scss
@@ -1,7 +1,5 @@
 .yt-video-container {
-    width: 150px;
     padding: 10px;
     // box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     margin-top: 2px;
-    height: 100%;
   }
